# Market-Making-Bot

./: .gitignore  CMakeLists.txt  Main.qml  README.md  appcryptoArbitrage  dataPipeline.cpp  dataPipeline.h  main.cpp  test1.txt
StrategyEngine/: strategy.c  strategy.h
cryptoArbitrage/: CMakeLists.txt  Main.qml  cryptoArbitrage-2.code-workspace  dataPipeline.cpp  dataPipeline.h  main.cpp
cryptoArbitrage/StrategyEngine/: a.out  strategy.c
datapipeline/: dataPipeline.cpp  dataPipeline.h
exchange/: BaseExchange.h  Exchange1.cpp
interface/arbot/: package-lock.json  package.json
interface/arbot/app/: globals.css  layout.tsx  page.tsx
interface/arbot/components/: chart.tsx  controlpannel.tsx  navbar.tsx  orderhistory.tsx  pulsemap.tsx  symbol.tsx
strategy/: ImbalanceStrategy.cpp  ImbalanceStrategy.h
vulkan/: VulkanChart.cpp
